sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:19: error: ')' expected but '}' found.
  }while (ecart>1 || !inverse )
  ^